--- a/style.css
+++ b/style.css
@@ -13,62 +13,62 @@ body{
 }
 button{
     position: absolute;
-    top: 15%;
-    left: 15%;
-    font-size: 40px;
+    top: 1%;
+    left: 2%;
+    font-size: 16px;
     text-decoration: none;
     outline: none;
-    width: 200px;
-    height: 100px;
+    width: 100px;
+    height: 60px;
     border-radius: 50px;
 background: linear-gradient(145deg, #4baae1, #04771d);
    z-index: 1;
 }
 button:hover{
-    width: 250px;
-    height: 150px; 
-    border-radius: 100px;
-    box-shadow:  -20px -20px #000;
-
+    width: 150px;
+    height: 80px; 
+    border-radius: 50px;
+    box-shadow:  -10px -10px #000;
 }
 .section1{
     position: absolute;
-    top: 2%;
-    right: 10%;
-    width: 700px;
+    top: 1%;
+    right: 2%;
+    width: 500px;
     height: auto;
     background: #fff;
     border-radius: 10px;
-    font-size: 24px;
-    text-align: justify;
-    letter-spacing: 3px;
+    font-size: 12px;
+    text-align: center;
+    letter-spacing: 1px;
 }
 .section2{
     position: absolute;
     top: 2%;
     right: 40%;
-    width: 500px;
+    width: 350px;
     height: auto;
     background: #fff;
     border-radius: 10px;
-    font-size: 32px;
-    text-align: justify;
+    font-size: 12px;
+    text-align: center;
     letter-spacing: 3px;
+  line-height:20px;
     
     
 }
 .section3{
     position: absolute;
-    bottom: 2%;
-    right: 5%;
-    width: auto;
+    top: 45%;
+    right: 40%;
+    width: 350px;
     height: auto;
     background: #fff;
     border-radius: 10px;
-    font-size: 50px;
+    font-size: 12px;
     text-align: center;
     letter-spacing: 3px;
-    font-weight: 900;
+  line-height:20px;
 }
 img{
     position: absolute;
